# my-instagram

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  redis.conf  setup.cfg
final_project/: app.py  app_creation.py  config.py  exceptions.py  logging.conf  main.py  messages.py  models.py  password.py  redis.py  redis_keys.py  storage.py  storage_client.py  utils.py
final_project/api/: auth.py  post.py  posts.py  storage.py  users.py  utils.py
final_project/data_access_layer/: auth.py  post.py  posts.py  serialization.py  storage.py  users.py
final_project/database/: database.py  models.py
final_project/image_processor/: cutter.py  image.py  saver.py  storage_client.py  worker.py
tests/: conftest.py  test_auth_DAL.py  test_auth_controller.py  test_my_image.py  test_post_dal.py  test_posts_dal.py  test_saver.py  test_serialization.py  test_storage_client.py  test_storage_dal.py  test_users_DAL.py  test_users_controller.py  test_utils.py  test_worker.py
